src/objects/Credit_Check_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Version__c</fullName>
        <label>API Version</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>JSON_Template__c</fullName>
        <label>JSON Template</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Credit Check Configuration</label>
    <pluralLabel>Credit Check Configurations</pluralLabel>
</CustomObject>